--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '20a'
+	sourceCompatibility = '21'
 }
 
 repositories {
@@ -19,7 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	runtimeOnly 'com.h2database:h2:2.1.214'
+	runtimeOnly 'com.h2database:h2:2.2.224'
 	
 }
 
