--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
-name : CI
+name: CI
 
-on: [ push ]
+on: [push]
 
 jobs:
   build:
@@ -12,5 +12,9 @@ jobs:
         with:
           distribution: "adopt"
           java-version: 21
-      - name: clean build
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+      - name: Clean build
         run: ./gradlew clean build --info --stacktrace
