--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:h2:file:/Users/User/Desktop/Demo
+spring.datasource.url = ${DATASOURCE_URL}
+
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driverClassName=org.h2.Driver
